LogOutput/RandomWordLogger/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - name: logoutput
          image: icelyx/logoutput
          ports:
           - containerPort: 8080
