LogOutput/RandomWordLogger/manifests/service.yaml


apiVersion: v1
kind: Service
metadata:
  name: logoutput-service
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
