LogOutput/RandomWordLogger/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  ingressClassName: traefik
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-service
            port:
              number: 1234
